# gaia-cli

./: CLAUDE.md  README.md  precip-example.ipynb  pyproject.toml
.github/workflows/: stage.yml  test.yml
docs/: adding-a-dataset.md
src/gaia_cli/: __main__.py  all.py  cli.py  data_loader.py  dem.py  hrrr.py  io.py  nlcd.py  prism.py  synoptic.py
tests/: test_cli.py  test_io.py
